--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(make.unique.2)
 export(map_PTM_sites)
 export(mixed_effects_anova)
 export(msnset2txt)
+export(msnset_to_tidy)
 export(normalizeByGlob)
 export(normalizeByRef)
 export(normalize_by_feature_property)
@@ -249,6 +250,7 @@ importFrom(reshape2,acast)
 importFrom(reshape2,melt)
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
+importFrom(rlang,.data)
 importFrom(rlang,as_function)
 importFrom(rlang,parse_expr)
 importFrom(rlang,sym)
